--- a/overlay/etc/nginx/sites-available/generic.conf.d/root/20_cache.conf
+++ b/overlay/etc/nginx/sites-available/generic.conf.d/root/20_cache.conf
@@ -1,16 +1,19 @@
+	#ignore_invalid_headers off;
+
     # Cache Location
-    slice 1m;
+    slice 16M;
     proxy_cache $cacheidentifier;
 
-    proxy_ignore_headers Expires Cache-Control;
+    proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie Vary;
     proxy_cache_valid 200 206 CACHE_MAX_AGE;
-    proxy_set_header  Range $slice_range;
+    proxy_set_header Range $slice_range;
 
     # Only download one copy at a time and use a large timeout so
     # this really happens, otherwise we end up wasting bandwith
     # getting the file multiple times.
     proxy_cache_lock on;
     proxy_cache_lock_timeout 1h;
+	#proxy_cache_lock_age MAYBE
 
     # Allow the use of state entries
     proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
@@ -27,4 +30,3 @@
 
     # 40G max file
     proxy_max_temp_file_size 40960m;
-
