--- a/overlay/etc/nginx/sites-available/10_generic.conf
+++ b/overlay/etc/nginx/sites-available/10_generic.conf
@@ -1,21 +1,21 @@
 
-server {
-  # Don't cache these zones
-  listen 80 default_server;
-  
-  access_log /data/logs/access.log;
-  error_log /data/logs/error.log;
-  
-  # Don't cache Google redirectors
-  server_name redirector.gvt1.com;
-
-  location / {
-    proxy_http_version 1.1;
-    proxy_pass http://${host};
-    proxy_pass_request_headers on;
-    proxy_set_header Host $host;
-  }
-}
+#server {
+#  # Don't cache these zones
+#  listen 80 default_server;
+#  
+#  access_log /data/logs/access.log;
+#  error_log /data/logs/error.log;
+#  
+#  # Don't cache Google redirectors
+#  server_name redirector.gvt1.com;
+#
+#  location / {
+#    proxy_http_version 1.1;
+#    proxy_pass http://${host};
+#    proxy_pass_request_headers on;
+#    proxy_set_header Host $host;
+#  }
+#}
 
 server {
   listen 80 reuseport;
